deploy/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  labels:
    name: postgres
spec:
  containers:
    - resources:
        limits :
          cpu: 
      image: postgres
      name: postgres
      ports:
        - containerPort: 5432
          name: postgres
      volumeMounts:
        - name: postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
  volumes:
    - name: postgres-persistent-storage
      persistentVolumeClaim:
        claimName: postgres-pvclaim
