deploy/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bom-order-nodejs
  namespace: bomtawep-dev
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app: postgresql
  ports:
    - name: pgsql
      port: 5432
      targetPort: 5432
