deploy/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              protocol: TCP
          image: image-registry.openshift-image-registry.svc:5000/postgres/non-root-postgres:latest
          imagePullPolicy: Always
          resources:
          limits:
            cpu: 60m
            memory: 512Mi
          requests:
            cpu: 30m
            memory: 128Mi
          restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports:
    - name: http
      port: 5432
      protocol: TCP
  selector:
    app: postgres
  type: NodePort
