deploy/bom-order-nodejs-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: bom-order-nodejs-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/bom-order-nodejs-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/bom-order-nodejs-default: "true"
